# halcheck

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml  static.yaml
cmake/: halcheck-config.cmake  halcheck.pc.in  target-link-system-libraries.cmake
doc/: .chktexrc  Makefile  design.tex  intro.md  intro.tex  localSettings.yaml  slides.tex  upload
doc/design/: 0-overview.tex
doc/intro/: 0-motivation.tex  2-summary.tex
doc/slides/: 0-motivation.tex  0-overview.tex  1-design.tex  2-summary.tex
extra/: iwyu.imp  suppressions.tsan
html/: annotated.html  any_8hpp_source.html  arbitrary_8hpp_source.html  atom_8hpp_source.html  base_8hpp_source.html  bit_8hpp_source.html  check_8hpp_source.html  clang_8hpp_source.html  classes.html  classhalcheck_1_1lib_1_1any-members.html  classhalcheck_1_1lib_1_1any.html  classhalcheck_1_1lib_1_1dag-members.html  classhalcheck_1_1lib_1_1dag.html  classhalcheck_1_1lib_1_1dag_a1825c6972657e587dcf27e4e06b37abe.html  classhalcheck_1_1lib_1_1dag_a219f7d7bf01a69e2063bbb4553049953.html  classhalcheck_1_1lib_1_1dag_a33bf175fd9adbc488f5b67822f8ea406.html  classhalcheck_1_1lib_1_1dag_a39bb86594406ee5d9b877448c3f7f731.html  classhalcheck_1_1lib_1_1dag_a3fc57aeb2b8bfc6c22563d273d7b7991.html  classhalcheck_1_1lib_1_1dag_a41a9dd1572e9dcda44ffd225693ec2b8.html  classhalcheck_1_1lib_1_1dag_a58de8ed337546235217c83f5fa4f35f0.html  classhalcheck_1_1lib_1_1dag_a8dff0e36ccd6e18df35c492368c2df0c.html  classhalcheck_1_1lib_1_1dag_a8ed67e8f30d847f6b59a777c34c9d3e2.html  classhalcheck_1_1lib_1_1dag_aae61ca686a138bfff2867308c1bdc4a4.html  classhalcheck_1_1lib_1_1dag_ac251901c91bba2d7fab7ac56d0bcf397.html  classhalcheck_1_1lib_1_1dag_acbd1c709da50d0783e4121c77a76c4e4.html  classhalcheck_1_1lib_1_1dag_ada96fe7d758a73ed9025708f3555cc6f.html  classhalcheck_1_1lib_1_1dag_adb97bdf03e8b69ad8aa6b742051699f8.html  classhalcheck_1_1lib_1_1dag_ae0b9c9096efe02f4ead781902dd5f292.html  classhalcheck_1_1lib_1_1dag_aef601851ca75da9521fc8d15cdb6b14c.html  classhalcheck_1_1lib_1_1dag_afbe0f88773ef7d6eba1f63c815b88db7.html  classhalcheck_1_1lib_1_1effect-members.html  classhalcheck_1_1lib_1_1effect.html  classhalcheck_1_1lib_1_1effect_1_1handler-members.html  classhalcheck_1_1lib_1_1effect_1_1handler.html  classhalcheck_1_1lib_1_1effect_1_1handler_a82a79dfa51707a6c09c40605970e32fd.html  classhalcheck_1_1lib_1_1effect_1_1handler_ad8e839c0acb9ad753f490d7c5919b254.html  classhalcheck_1_1lib_1_1effect_1_1handler_af05b5081bccbb60a968cf1b872920e77.html  classhalcheck_1_1lib_1_1effect_1_1state-members.html  classhalcheck_1_1lib_1_1effect_1_1state.html  classhalcheck_1_1lib_1_1effect_1_1state_a0684172207ecdf9526ceac7da20172bb.html  (+511 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+71 more)
include/: halcheck.hpp
include/halcheck/: clang.hpp  eff.hpp  fmt.hpp  gen.hpp  glog.hpp  gtest.hpp  lib.hpp  test.hpp  thread.hpp
include/halcheck/clang/: fuzz.hpp
include/halcheck/eff/: api.hpp  context.hpp
include/halcheck/ext/: doctest.hpp  gtest.hpp
include/halcheck/fmt/: flatten.hpp  indent.hpp  infer.hpp  log.hpp  show.hpp  showable.hpp  type.hpp
include/halcheck/glog/: filter.hpp
include/halcheck/gtest/: pp.hpp  wrap.hpp
include/halcheck/lib/: any.hpp  atom.hpp  bit.hpp  dag.hpp  effect.hpp  functional.hpp  iterator.hpp  memory.hpp  numeric.hpp  optional.hpp  pp.hpp  raise.hpp  ranges.hpp  scope.hpp  span.hpp  string.hpp  thread.hpp  tree.hpp  trie.hpp  tuple.hpp  type_traits.hpp  typeinfo.hpp  utility.hpp  variant.hpp
include/halcheck/test/: capture.hpp  check.hpp  config.hpp  deserialize.hpp  limit.hpp  limited.hpp  random.hpp  record.hpp  repeat.hpp  replay.hpp  sampler.hpp  serialize.hpp  shrink.hpp  shrinking.hpp  sized.hpp  strategy.hpp
include/halcheck/thread/: mutex.hpp  parallel.hpp  version.hpp
include/halcheck/tyche/: observe.hpp
src/base/: CMakeLists.txt
src/clang/: CMakeLists.txt  fuzz.cpp
src/eff/: CMakeLists.txt  api.cpp  context.cpp
src/glog/: CMakeLists.txt  filter.cpp
src/gtest/: CMakeLists.txt  pp.cpp  wrap.cpp
src/halcheck/: fmt.cpp  gen.cpp  test.cpp  thread.cpp
src/halcheck/ext/: doctest.cpp
src/halcheck/fmt/: flatten.cpp  indent.cpp  infer.cpp  log.cpp  show.cpp  showable.cpp  type.cpp
src/halcheck/lib/: effect.cpp  functional.cpp  numeric.cpp  optional.cpp  raise.cpp  ranges.cpp  scope.cpp  thread.cpp  tuple.cpp  type_traits.cpp  typeinfo.cpp  variant.cpp
src/halcheck/test/: capture.cpp  check.cpp  limit.cpp  random.cpp  record.cpp  (+5 more)
src/lib/: CMakeLists.txt  any.cpp  atom.cpp  bit.cpp  dag.cpp  effect.cpp  functional.cpp  iterator.cpp  memory.cpp  numeric.cpp  optional.cpp  pp.cpp  raise.cpp  scope.cpp  string.cpp  tree.cpp  trie.cpp  tuple.cpp  type_traits.cpp  typeinfo.cpp  utility.cpp  variant.cpp
src/lib/iterator/: type_traits.cpp
src/test/: CMakeLists.txt  check.cpp  config.cpp  deserialize.cpp  json.hpp  random.cpp  repeat.cpp  serialize.cpp  shrink.cpp  sized.cpp  strategy.cpp
src/tyche/: CMakeLists.txt  observe.cpp
test/: CMakeLists.txt  main.cpp
test/doctest/: CMakeLists.txt  doctest.cpp
test/doctest/test/fmt/: flatten.cpp  show.cpp  type.cpp
test/doctest/test/lib/: effect.cpp  numeric.cpp  ranges.cpp
test/doctest/test/test/: check.cpp  shrink.cpp
test/eff/: context.cpp
test/example/: binary_search.cpp  counter.cpp  stack.cpp  store.cpp  utility.hpp
test/gtest/: CMakeLists.txt  gtest.cpp
test/gtest/test/: main.cpp
test/gtest/test/lib/: effect.cpp
test/lib/: atom.cpp  dag.cpp  effect.cpp  iterator.cpp  numeric.cpp
test/test/: random.cpp  repeat.cpp  shrink.cpp
(+31 files in other folders)
